--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 h1 {
   font-size: 60px;
+  letter-spacing: 2px;
   padding-top: 100px;
   margin-left: 100px;
   color:#333484;
@@ -16,13 +17,10 @@ h2 {
   color:#333484;
   text-align: left;
   font-family: 'Open Sans Condensed', sans-serif;
-  max-width: 500px;
-  border: .05em white solid;
-  padding: .5em;
-  padding-left: .9em;
+  max-width: auto;
+  border-top: .1em white solid;
   padding-right: .9em;
-  margin-top: 200px;
-  margin-bottom: 100px;
+  margin-top: 100px;
 }
 
 h3 {
@@ -49,15 +47,15 @@ h4 {
 }
 
 img {
-  width: 500px;
+  margin-left: 100px;
+  width: 300px;
   height: auto;
   display: block;
-  margin-left: 100px;
-  padding-top: 25px;
+  padding-top: 50px;
 }
 
 body {
-  background: linear-gradient(#c6dcff, #f6ffbf);
+  background: linear-gradient(#c6dcff, #f6ffbf, #f6ffbf, #c6dcff);
   height: auto;
 }
 
@@ -78,6 +76,7 @@ body {
 .column img {
   margin-top: 8px;
   vertical-align: middle;
+  width: 100%;
 }
 
 /* Responsive layout - makes a two column-layout instead of four columns */
@@ -100,6 +99,6 @@ body {
   width: 500px;
   height: auto;
   display: block;
-  margin-left: 100px;
   padding-top: 25px;
+  padding-bottom: 100px;
 }
