--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ body {
 .row {
   display: flex;
   flex-wrap: wrap;
-  padding: 0 4px;
+  padding: 0 px;
 }
 
 /* Create four equal columns that sits next to each other */
