--- a/style.css
+++ b/style.css
@@ -100,5 +100,11 @@ body {
   height: auto;
   display: block;
   padding-top: 25px;
-  padding-bottom: 100px;
+  padding-bottom: 20px;
+}
+
+.smaller {
+  font-size: 17px;
+  font-weight: lighter;
+  padding-left: 1em;
 }
